<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (c) 2016 yvolk (Yuri Volkov), http://yurivolkov.com
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<!-- On tools: namespace see http://tools.android.com/tips/layout-designtime-attributes -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/note_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="3dp"
        android:visibility="visible">

        <View style="@style/ThickDivider"/>

        <RelativeLayout
            android:id="@+id/note_editor_above_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/note_author"
                style="@style/messageUsernameAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="2dp"
                tools:text="John Doe/Loadaverage"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/message_characters_left"/>

                <TextView
                    android:id="@+id/noteEditCharsLeftTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    tools:text="4789"/>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/note_editor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/note_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"/>

                <EditText
                    android:id="@+id/summary_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage|textAutoCorrect|textAutoComplete"
                    android:hint="@string/summaryCw"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <org.andstatus.app.note.NoteEditorBodyView
                        android:id="@+id/noteBodyEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:completionThreshold="2"
                        android:dropDownHeight="140dp"
                        android:dropDownWidth="wrap_content"
                        android:hint="@string/message_edit_hint"
                        android:imeOptions="actionSend|flagNoEnterAction"
                        android:inputType="textShortMessage|textAutoCorrect|textAutoComplete|textCapSentences|textMultiLine|textImeMultiLine"
                        android:maxLength="5000"
                        android:maxLines="8"/>

                    <ImageView
                        android:id="@+id/sendInEditorButton"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_gravity="bottom"
                        android:src="?attr/sendInEditorIcon"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"
                        android:visibility="gone"
                        tools:visibility="visible"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/note_editor_below_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/attachments_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/is_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeline_title_public"
                    android:visibility="gone"
                    android:layout_marginEnd="10dp"
                    tools:visibility="visible"/>

                <CheckBox
                    android:id="@+id/is_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:visibility="gone"
                    android:layout_marginEnd="10dp"
                    tools:visibility="visible"/>

                <CheckBox
                    android:id="@+id/is_sensitive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensitive"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

            <TextView
                android:id="@+id/noteEditDetails"
                style="@style/messageDetailsAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:layout_marginEnd="5dip"
                tools:text="one hour ago in reply to somebody@somewhere.net (with media 1920x1080 1323kb)"/>

            <TextView
                android:id="@+id/inReplyToBody"
                style="@style/messageBodyAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                tools:text="This is a sample body of a message we are replying to.\nThis message may be quite long..."/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
