<?xml version="1.0" encoding="utf-8"?>
<!-- 
    Copyright (c) 2014-2017 yvolk (Yuri Volkov), http://yurivolkov.com
	
	Licensed under the Apache License, Version 2.0 (the "License");
	you may not use this file except in compliance with the License.
	You may obtain a copy of the License at
	
	     http://www.apache.org/licenses/LICENSE-2.0
	
	Unless required by applicable law or agreed to in writing, software
	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/attach_menu_id"
        android:alphabeticShortcut="a"
        android:icon="?attr/attachIcon"
        app:showAsAction="always"
        android:title="@string/options_menu_attach"
        android:visible="false">
    </item>
    <item
        android:id="@+id/noteSendButton"
        android:icon="?attr/sendIcon"
        app:showAsAction="always"
        android:title="@string/button_send"
        android:visible="false">
    </item>
    <item
        android:id="@+id/saveDraftButton"
        android:icon="?attr/saveMessageIcon"
        app:showAsAction="ifRoom"
        android:title="@string/button_save_draft"
        android:visible="false">
    </item>
    <item
        android:id="@+id/discardButton"
        app:showAsAction="never"
        android:title="@string/button_discard"
        android:visible="false">
    </item>
</menu>
