<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2017 yvolk (Yuri Volkov), http://yurivolkov.com
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
         http://www.apache.org/licenses/LICENSE-2.0
    
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".timeline.TimelineActivity"
                tools:theme="@style/Theme.AndStatus.FullyDefined">

    <View android:id="@+id/divider" style="@style/Divider"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/note_wrapper" />
    </LinearLayout>

    <TextView
        android:id="@+id/note_number"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/messageUsernameAppearance"
        tools:text="Top"/>

    <TextView
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>
